--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
         "types": [], // 赋值为空数组使@types/node不会起作用
         "lib": ["dom", "esnext", "ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020"],
         "baseUrl": ".",
-        "rootDir": "./libs"
+        "rootDir": "./libs",
+        "strictNullChecks": true
     },
     "include": [
       "./libs/**/src/**/*.ts",
