--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,5 +36,6 @@
       "./libs/**/src/**/*.ts",
       "libs/index.d.ts"
     ],
-    "exclude": ["node_modules", "**/*.spec.ts", "dev"]
+    "exclude": ["node_modules", "**/*.spec.ts", "dev"],
+    "types": ["node"], 
 }
