--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "workspaces": [
     "libs/*"
   ],
+  "scripts": {
+    "build": " webpack --config ./scripts/webpack/webpack.config.js",
+    "build-3rdLib": "node ./scripts/gen3rdLib.js",
+    "build-3rdLib-dev": "node ./scripts/gen3rdLib.js --dev",
+    "debug-test": "yarn test --debug",
+    "test": "jest --config=jest.config.js",
+    "watch-test": "yarn test --watch --dev"
+  },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/code-frame": "^7.10.4",
@@ -40,9 +48,9 @@
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.14.5",
     "@babel/traverse": "^7.11.0",
-    "@cloudsop/eview-ui": "^0.1.65",
     "@mattiasbuelens/web-streams-polyfill": "^0.3.2",
-    "art": "0.10.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^17.0.18",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^27.5.1",
@@ -52,14 +60,11 @@
     "babel-preset-react": "^6.24.1",
     "chalk": "^3.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "cli-table": "^0.3.1",
-    "coffee-script": "^1.12.7",
     "concurrently": "^6.2.0",
     "confusing-browser-globals": "^1.0.9",
     "copy-webpack-plugin": "5.0.4",
     "core-js": "^3.6.4",
     "coveralls": "^3.0.9",
-    "create-react-class": "^15.6.3",
     "cross-env": "^7.0.3",
     "css-loader": "3.4.2",
     "danger": "^9.2.10",
@@ -76,15 +81,11 @@
     "eslint-plugin-react": "^6.7.1",
     "eslint-webpack-plugin": "^3.0.1",
     "express": "^4.17.1",
-    "fbjs-scripts": "1.2.0",
     "filesize": "^6.0.1",
-    "flow-bin": "0.97",
     "glob": "^7.1.6",
     "glob-stream": "^6.1.0",
-    "google-closure-compiler": "^20200517.0.0",
     "gzip-size": "^5.1.1",
     "html-webpack-plugin": "4.4.1",
-    "jasmine-check": "^1.0.0-rc.0",
     "jest": "^25.5.4",
     "jest-cli": "^25.2.7",
     "jest-diff": "^25.2.6",
@@ -94,18 +95,14 @@
     "minimatch": "^3.0.4",
     "minimist": "^1.2.3",
     "mkdirp": "^0.5.1",
-    "mocha": "^9.0.1",
     "ncp": "^2.0.0",
     "object-assign": "^4.1.1",
     "pacote": "^10.3.0",
     "power-assert": "^1.6.1",
     "prettier": "1.19.1",
     "prop-types": "^15.6.2",
-    "puppeteer-core": "^10.1.0",
     "random-seed": "^0.3.0",
-    "react-is": "^17.0.2",
     "react-lifecycles-compat": "^3.0.4",
-    "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.9",
     "resemblejs": "^4.0.0",
     "rimraf": "^3.0.0",
@@ -124,23 +121,5 @@
   },
   "devEngines": {
     "node": "8.x || 9.x || 10.x || 11.x || 12.x || 13.x || 14.x"
-  },
-  "scripts": {
-    "build": " webpack --config ./scripts/webpack/webpack.config.js",
-    "build-3rdLib": "node ./scripts/gen3rdLib.js",
-    "build-3rdLib-dev": "node ./scripts/gen3rdLib.js --dev",
-    "debug-test": "yarn test --debug",
-    "test": "jest --config=jest.config.js",
-    "watch-test": "yarn test --watch --release-channel=horizon --dev"
-  },
-  "dependencies": {
-    "@elg/speedscope": "^1.9.0-a6f84db",
-    "@types/node": "^17.0.18",
-    "babel-code-frame": "^6.26.0",
-    "grunt-cli": "^1.4.3",
-    "react-dom": "^17.0.2",
-    "react-shallow-renderer": "^16.14.1",
-    "rxjs": "^7.1.0",
-    "symlink-dir": "^4.2.0"
   }
 }
