--- a/package.json
+++ b/package.json
@@ -59,14 +59,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chalk": "^3.0.0",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "concurrently": "^6.2.0",
     "confusing-browser-globals": "^1.0.9",
     "copy-webpack-plugin": "5.0.4",
     "core-js": "^3.6.4",
-    "coveralls": "^3.0.9",
-    "cross-env": "^7.0.3",
-    "css-loader": "3.4.2",
     "danger": "^9.2.10",
     "ejs": "^3.1.6",
     "error-stack-parser": "^2.0.6",
@@ -80,46 +75,25 @@
     "eslint-plugin-no-function-declare-after-return": "^1.0.0",
     "eslint-plugin-react": "^6.7.1",
     "eslint-webpack-plugin": "^3.0.1",
-    "express": "^4.17.1",
-    "filesize": "^6.0.1",
-    "glob": "^7.1.6",
-    "glob-stream": "^6.1.0",
-    "gzip-size": "^5.1.1",
-    "html-webpack-plugin": "4.4.1",
     "jest": "^25.5.4",
     "jest-cli": "^25.2.7",
     "jest-diff": "^25.2.6",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-react": "^0.12.0",
     "jest-snapshot-serializer-raw": "^1.1.0",
-    "minimatch": "^3.0.4",
     "minimist": "^1.2.3",
-    "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0",
     "object-assign": "^4.1.1",
-    "pacote": "^10.3.0",
-    "power-assert": "^1.6.1",
     "prettier": "1.19.1",
-    "prop-types": "^15.6.2",
-    "random-seed": "^0.3.0",
     "react-lifecycles-compat": "^3.0.4",
     "regenerator-runtime": "^0.13.9",
-    "resemblejs": "^4.0.0",
     "rimraf": "^3.0.0",
-    "semver": "^7.1.1",
-    "style-loader": "1.0.0",
-    "targz": "^1.0.1",
-    "through2": "^3.0.1",
-    "tmp": "^0.1.0",
     "tslint": "^6.0.0",
     "typescript": "^3.9.7",
-    "url-loader": "^4.1.1",
-    "wait-on": "^6.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.7.2",
-    "yargs": "^15.3.1"
+    "webpack-cli": "^4.7.2"
   },
-  "devEngines": {
-    "node": "8.x || 9.x || 10.x || 11.x || 12.x || 13.x || 14.x"
+  "engines": {
+    "node": ">=10.x",
+    "npm": ">=7.x"
   }
 }
