--- a/libs/horizon-jsx-transform-babel-plugin/package.json
+++ b/libs/horizon-jsx-transform-babel-plugin/package.json
@@ -31,7 +31,6 @@
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/types": "^7.0.0",
-    "babel-plugin-tester": "^10.1.0",
-    "ts-jest": "^26.1.3"
+    "babel-plugin-tester": "^10.1.0"
   }
 }
