--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": " webpack --config ./scripts/webpack/webpack.config.js",
     "build-3rdLib": "node ./scripts/gen3rdLib.js",
-    "build-3rdLib-dev": "node ./scripts/gen3rdLib.js --dev",
+    "build-3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js --dev",
     "debug-test": "yarn test --debug",
     "test": "jest --config=jest.config.js",
     "watch-test": "yarn test --watch --dev"
