Match-id-ddc04393535a21d690fbfe2f977d3107d3c8ed23

--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@mattiasbuelens/web-streams-polyfill": "^0.3.2",
     "@types/jest": "^26.0.24",
     "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^27.5.1",
@@ -66,7 +68,6 @@
     "ejs": "^3.1.6",
     "error-stack-parser": "^2.0.6",
     "eslint": "^7.32.0",
-    "eslint-config-fbjs": "^1.1.1",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "^2.25.0",
@@ -87,7 +88,6 @@
     "react-lifecycles-compat": "^3.0.4",
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.0",
-    "tslint": "^6.0.0",
     "typescript": "^3.9.7",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.2"
