Match-id-5935bd5d4b80a4524d2b9a839ca106c4249ad3e5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,8 @@
     },
     "include": [
       "./libs/**/src/**/*.ts",
-      "libs/index.d.ts"
+      "libs/horizon/index.d.ts"
     ],
     "exclude": ["node_modules", "**/*.spec.ts", "dev"],
-    "types": ["node"], 
+    "types": ["node"]
 }
