--- a/libs/extension/src/manifest.json
+++ b/libs/extension/src/manifest.json
@@ -18,5 +18,10 @@
       "run_at": "document_start"
     }
   ],
-    "web_accessible_resources": []
+    "web_accessible_resources": [
+    {
+      "resources": [ "injector.js", "background.js" ],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
