Match-id-6e130b06d6dfa189100fb7eb3a42f10b22fd6913

--- a/libs/extension/package.json
+++ b/libs/extension/package.json
@@ -15,21 +15,21 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/jest": "^27.4.1",
+    "@babel/preset-typescript": "7.16.7",
+    "@types/jest": "27.4.1",
     "babel-loader": "8.1.0",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.4",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
+    "css-loader": "6.7.1",
+    "html-webpack-plugin": "5.5.0",
+    "jest": "27.5.1",
+    "less": "4.1.2",
+    "less-loader": "10.2.0",
+    "style-loader": "3.3.1",
+    "ts-jest": "27.1.4",
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2",
     "webpack-dev-server": "^4.7.4"
   }
 }
