Match-id-6cde1d60850e4a64e0d4c16b2dad41f9f29fc8a5

--- a/libs/extension/package.json
+++ b/libs/extension/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config ./webpack.config.js",
     "watch": "webpack --config ./webpack.config.js --watch",
     "build-dev": "webpack --config ./webpack.dev.js",
-    "start": "webpack serve --config ./webpack.dev.js ",
+    "start": "npm run build && webpack serve --config ./webpack.dev.js ",
     "test": "jest"
   },
   "keywords": [],
