--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     },
     "include": [
       "./libs/**/src/**/*.ts",
-      "libs/horizon/index.d.ts"
+      "./libs/**/*.ts",
+      "./libs/horizon/global.d.ts"
     ],
     "exclude": ["node_modules", "**/*.spec.ts", "dev"],
     "types": ["node"]
