--- a/libs/horizon-jsx-transform-babel-plugin/package.json
+++ b/libs/horizon-jsx-transform-babel-plugin/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/traverse": "^7.11.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/types": "^7.0.0",
     "babel-plugin-tester": "^10.1.0"
