--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   ],
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "build": " rollup --config ./scripts/rollup/rollup.config.js",
-    "build:watch": " rollup --watch --config ./scripts/rollup/rollup.config.js",
+    "build": "rollup --config ./scripts/rollup/rollup.config.js",
+    "build:watch": "rollup --watch --config ./scripts/rollup/rollup.config.js",
     "build-3rdLib": "node ./scripts/gen3rdLib.js",
     "build-3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js --dev",
     "build-horizon3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js --dev --type horizon",
+    "build-types": "tsc -p ./libs/horizon/index.ts --emitDeclarationOnly --declaration --declarationDir ./build/horizon/@types --skipLibCheck",
     "debug-test": "yarn test --debug",
     "test": "jest --config=jest.config.js",
     "watch-test": "yarn test --watch --dev"
@@ -92,6 +93,7 @@
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.0",
     "rollup": "^2.75.5",
+    "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^3.9.7"
   },
