--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   ],
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "build": " rollup --config ./scripts/rollup/rollup.config.js",
-    "build:watch": " rollup --watch --config ./scripts/rollup/rollup.config.js",
+    "build": "rollup --config ./scripts/rollup/rollup.config.js",
+    "build:watch": "rollup --watch --config ./scripts/rollup/rollup.config.js",
     "build-3rdLib": "node ./scripts/gen3rdLib.js",
     "build-3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js --dev",
     "build-horizon3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js --dev --type horizon",
+    "build-types": "tsc -p ./libs/horizon/index.ts --emitDeclarationOnly --declaration --declarationDir ./build/horizon/@types --skipLibCheck",
     "debug-test": "yarn test --debug",
     "test": "jest --config=jest.config.js",
     "watch-test": "yarn test --watch --dev"
@@ -56,6 +57,7 @@
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "prettier": "2.6.2",
     "rollup": "^2.75.5",
+    "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "4.2.3"
   },
