--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/plugin-transform-destructuring": "7.16.7",
     "@babel/plugin-transform-for-of": "7.16.7",
     "@babel/plugin-transform-literals": "7.16.7",
+    "@babel/plugin-transform-object-assign": "7.16.7",
     "@babel/plugin-transform-object-super": "7.16.7",
     "@babel/plugin-transform-parameters": "7.16.7",
     "@babel/plugin-transform-runtime": "7.16.7",
