--- a/.cloudbuild/test.yml
+++ b/.cloudbuild/test.yml
@@ -19,12 +19,19 @@ env:
     - type: workspace
 steps:
   PRE_BUILD:
-    - checkout
+    - checkout:
+        path: horizon-core
     - gitlab:
-        url: https://szv-y.codehub.huawei.com/CloudSOP/CloudSOP-CI.git
-        branch: $branch
-        path: CI
+        url: https://szv-open.codehub.huawei.com/innersource/shanhai/wutong/react/horizon-test.git
+        branch: one_tree_dev
+        path: horizon-test
   BUILD:
     - build_execute:
         command: |
-          git tag $releaseVersion
+          npm install yarn -g
+          yarn config set strict-ssl false
+          cd horizon-core
+          yarn
+          cd ../horizon-test
+          yarn
+          yarn run test
