Match-id-12d462d57e45d6a2337ce371637f7c45bec9ff99

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "lint": "eslint . --ext .ts",
     "build": "rollup --config ./scripts/rollup/rollup.config.js",
     "build:watch": "rollup --watch --config ./scripts/rollup/rollup.config.js",
-    "build-3rdLib": "node ./scripts/gen3rdLib.js",
-    "build-3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js --dev",
-    "build-horizon3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js --dev --type horizon",
+    "build:3rdLib": "node ./scripts/gen3rdLib.js build:3rdLib",
+    "build:3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js build:3rdLib-dev",
+    "build:horizon3rdLib-dev": "npm run build & node ./scripts/gen3rdLib.js build:horizon3rdLib-dev",
     "build-types": "tsc -p ./libs/horizon/index.ts --emitDeclarationOnly --declaration --declarationDir ./build/horizon/@types --skipLibCheck",
     "debug-test": "yarn test --debug",
     "test": "jest --config=jest.config.js",
