Match-id-293b5d8b9c2678e17d9ccda1aeae0b5e13d2396e

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "libs/*"
   ],
   "scripts": {
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts --fix",
+    "prettier": "prettier -w libs/**/*.ts",
     "build": "rollup --config ./scripts/rollup/rollup.config.js",
     "build:watch": "rollup --watch --config ./scripts/rollup/rollup.config.js",
     "build:3rdLib": "node ./scripts/gen3rdLib.js build:3rdLib",
