Match-id-5897bdce820681a8cecc6cd79ea82f1cda23ecf6

--- a/.cloudbuild/build.yml
+++ b/.cloudbuild/build.yml
@@ -27,6 +27,9 @@ steps:
         path: CI
   BUILD:
     - build_execute:
+        enhance:
+          - feature: md5_source_tracement
+            build_tools: [npm]
         command: |
           npm install yarn -g
           yarn config set strict-ssl false
