--- a/.cloudbuild/build.yml
+++ b/.cloudbuild/build.yml
@@ -27,9 +27,6 @@ steps:
         path: CI
   BUILD:
     - build_execute:
-        enhance:
-          - feature: md5_source_tracement
-            build_tools: [npm]
         command: |
           npm install yarn -g
           yarn config set strict-ssl false
@@ -38,3 +35,8 @@ steps:
           yarn run test
           yarn run build
           node .cloudbuild/release.js
+        enhance:
+          - feature: md5_source_tracement
+            build_tools: [npm]
+        check:
+          auto: true
