Match-id-fbe927b5b473399b58a2d0d8d2d93387db83ea83

--- a/.cloudbuild/build.yml
+++ b/.cloudbuild/build.yml
@@ -34,7 +34,7 @@ steps:
           yarn
           yarn run test
           yarn run build
-          node .cloudbuild/release.js
+          sh .cloudbuild/release.sh
         enhance:
           - feature: md5_source_tracement
             build_tools: [npm]
