Match-id-738065d70158d7458ee67dc555015670c66362bb

--- a/.cloudbuild/build.yml
+++ b/.cloudbuild/build.yml
@@ -8,7 +8,7 @@ notifications:
 buildspace:
   log_collect:
     - config/CI/build/logs
-  fixed: true
+  fixed: false
 env:
   resource:
     type: docker
