Match-id-01940cf2f09900b8f170152db9efd6b4de21f6a6

--- a/.cloudbuild/build.yml
+++ b/.cloudbuild/build.yml
@@ -40,3 +40,8 @@ steps:
           auto: true
           buildcheck: true
           mode: sync
+  POST_BUILD:
+    - compile_report:
+        rules:
+          - warning /.**/
+          - error /.**/
