Match-id-785473ead33f3451a1dddc93c6cea6efae7c6563

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "@cloudsop/horizon",
+  "description": "Horizon is a JavaScript framework library.",
+  "version": "0.0.51",
   "private": true,
   "workspaces": [
     "libs/*"
