Match-id-54dd80b5d500b1a474c7148a82d8902bcd4d1f9e

--- a/.cloudbuild/build.yml
+++ b/.cloudbuild/build.yml
@@ -21,7 +21,7 @@ steps:
         path: horizon-core
     - gitlab:
         url: https://szv-y.codehub.huawei.com/CloudSOP/CloudSOP-CI.git
-        branch: $branch
+        branch: master
         path: CI
   BUILD:
     - build_execute:
