--- a/packages/create-inula/lib/generators/InulaJS-antd/templates/webpack/package.json
+++ b/packages/create-inula/lib/generators/InulaJS-antd/templates/webpack/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@babel/plugin-proposal-export-default-from": "^7.18.6",
-    "inula": "0.0.38",
+    "inulajs": "^0.0.3",
     "antd": "^4.0.0",
     "axios": "^1.4.0",
     "classnames": "^2.2.6",
