--- a/packages/create-inula/lib/generators/Simple-app/templates/vite/package.json
+++ b/packages/create-inula/lib/generators/Simple-app/templates/vite/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inula": "^0.0.44"
+    "inulajs": "^0.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
