--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.16.7",
     "@babel/plugin-proposal-object-rest-spread": "7.16.7",
     "@babel/plugin-proposal-optional-chaining": "7.16.7",
+    "@babel/plugin-proposal-private-methods": "7.16.7",
+    "@babel/plugin-proposal-private-property-in-object": "7.16.7",
     "@babel/plugin-syntax-jsx": "7.16.7",
     "@babel/plugin-transform-arrow-functions": "7.16.7",
     "@babel/plugin-transform-block-scoped-functions": "7.16.7",
@@ -33,6 +35,7 @@
     "@babel/plugin-transform-template-literals": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
+    "@babel/runtime": "8.0.0-alpha.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
