--- a/packages/create-inula/lib/generators/InulaJS-antd/templates/webpack/package.json
+++ b/packages/create-inula/lib/generators/InulaJS-antd/templates/webpack/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.1",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
