--- a/packages/create-inula/lib/generators/InulaJS-antd/templates/vite/package.json
+++ b/packages/create-inula/lib/generators/InulaJS-antd/templates/vite/package.json
@@ -4,16 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@babel/plugin-proposal-export-default-from": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/runtime": "7.6.2",
-    "inulajs": "^0.0.3",
+    "inulajs": "^0.0.8",
     "antd": "^4.0.0",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
