--- a/packages/create-inula/lib/generators/Simple-app/templates/vite/package.json
+++ b/packages/create-inula/lib/generators/Simple-app/templates/vite/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inulajs": "^0.0.3"
+    "inulajs": "^0.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -18,6 +19,7 @@
     "@babel/preset-react": "^7.18.6",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "babel-plugin-import": "^1.13.6"
+    "babel-plugin-import": "^1.13.6",
+    "vite": "^4.4.9"
   }
 }
