Match-id-b554f4051ae0caac5c13cac1c3bdeea4d9f8845a

--- a/packages/create-inula/lib/generators/InulaJS-antd/templates/vite/package.json
+++ b/packages/create-inula/lib/generators/InulaJS-antd/templates/vite/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "vite build",
+    "build": "vite build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
