--- a/packages/horizon-intl/package.json
+++ b/packages/horizon-intl/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@cloudsop/horizon-intl",
-  "version": "1.0.7",
+  "name": "Inula-intl",
+  "version": "0.0.1",
   "description": "",
   "main": "build/intl.umd.js",
   "type": "commonjs",
-  "types": "build/@types/index.d.ts",
+  "types": "build/index.d.ts",
   "scripts": {
     "demo-serve": "webpack serve --mode=development",
     "rollup-build": "rollup --config rollup.config.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://szv-open.codehub.huawei.com/innersource/fenghuang/horizon/horizon-ecosystem.git"
+    "url": "https://szv-open.codehub.huawei.com/innersource/fenghuang/horizon/horizon-core.git"
   },
   "files": [
     "build",
@@ -23,9 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cloudsop/horizon": "^0.0.46",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "inulajs": "^0.0.11"
   },
   "devDependencies": {
     "@babel/core": "7.21.3",
@@ -58,6 +56,8 @@
     "typescript": "4.9.3",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
