--- a/packages/horizon-router/package.json
+++ b/packages/horizon-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cloudsop/horizon-router",
-  "version": "0.0.12",
+  "version": "1.0.5-alpha",
   "description": "router for horizon framework, a part of horizon-ecosystem",
   "main": "./router/cjs/router.js",
   "module": "./router/esm/router.js",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "rollup -c build.js",
+    "bulid": "rollup -c build.js",
     "build-types-router": "tsc -p src/router/index.ts --emitDeclarationOnly --declaration --declarationDir ./router/@types --skipLibCheck",
     "build-types-all": "tsc -p src/router/index2.ts --emitDeclarationOnly --declaration --declarationDir ./connectRouter/@types --skipLibCheck"
   },
@@ -67,10 +67,11 @@
     "rollup": "2.79.1",
     "rollup-plugin-execute": "^1.1.1",
     "ts-jest": "29.0.3",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "rollup-plugin-terser": "^5.1.3"
   },
   "dependencies": {
-    "@cloudsop/horizon": "^0.0.52",
+    "@cloudsop/horizon": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
