--- a/packages/inula-request/package.json
+++ b/packages/inula-request/package.json
@@ -1,13 +1,13 @@
 {
   "name": "inula-request",
-  "version": "1.0.20",
-  "description": "Horizon-request brings you a convenient request experience!",
+  "version": "1.0.0",
+  "description": "Inula-request brings you a convenient request experience!",
   "main": "index.ts",
   "scripts": {
     "test": "jest --config jest.config.cjs",
     "buildExample": "rollup -c rollup.config.example.js --bundleConfigAsCjs",
     "build": "rollup -c rollup.config.js --bundleConfigAsCjs",
-    "useIRExample": "webpack serve --config webpack.useHR.config.js --mode development",
+    "useIRExample": "webpack serve --config webpack.useIR.config.js --mode development",
     "server": "nodemon .\\examples\\server\\serverTest.mjs"
   },
   "files": [
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "ssh://git@szv-open.codehub.huawei.com:2222/innersource/fenghuang/horizon/horizon-ecosystem.git"
+    "url": ""
   },
   "keywords": [
     "inula-request"
