--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@babel/plugin-transform-template-literals": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
-    "@babel/runtime": "8.0.0-alpha.1",
+    "@babel/runtime": "7.16.7",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
