Match-id-ed8789a7c84439423b5635aa053359895b207f6c

--- a/packages/inula-cli/package.json
+++ b/packages/inula-cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@cloudsop/horizon-cli",
-  "version": "1.0.45",
+  "name": "inula-cli",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
