--- a/packages/create-inula/package.json
+++ b/packages/create-inula/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cloudsop/create-horizon",
+  "name": "create-inula",
   "version": "1.0.22",
   "description": "",
   "main": "index.js",
