--- a/packages/create-inula/lib/generators/Inula-antd/templates/vite/package.json
+++ b/packages/create-inula/lib/generators/Inula-antd/templates/vite/package.json
@@ -17,19 +17,17 @@
     "classnames": "^2.2.6",
     "echarts": "^5.0.0",
     "history": "^5.3.0",
-    "@cloudsop/horizon": "^0.0.58",
     "lodash": "^4.17.11",
     "moment": "2.24.0",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.1.0",
     "prop-types": "^15.7.0",
     "qs": "^6.10.0",
-    "react-dom": "17.0.2",
+    "inulajs": "0.0.11",
     "react-draft-wysiwyg": "^1.13.0",
-    "react-intl": "^6.3.2",
+    "inula-intl": "^0.0.1",
     "react-perfect-scrollbar": "^1.5.0",
-    "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0",
+    "inula-router": "^0.0.1",
     "recharts": "^2.0.0",
     "store": "^2.0.0"
   },
@@ -47,8 +45,6 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "7.18.6",
     "@babel/types": "7.18.6",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-refresh": "^1.3.5",
     "babel-loader": "8.2.5",
@@ -63,8 +59,6 @@
     "less-vars-to-js": "^1.3.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.0.0",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.0.1",
     "style-loader": "^3.2.2",
     "ts-loader": "^9.3.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
