--- a/packages/create-inula/lib/generators/Inula-antd/templates/webpack/package.json
+++ b/packages/create-inula/lib/generators/Inula-antd/templates/webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horizon-antd-fun",
+  "name": "inulajs-antd-fun",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,8 +17,6 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "7.18.6",
     "@babel/types": "7.18.6",
-    "@types/react": "16.8.6",
-    "@types/react-dom": "16.9.6",
     "babel-loader": "^9.0.0",
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "^4.3.0",
@@ -42,7 +40,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@babel/plugin-proposal-export-default-from": "^7.18.6",
-    "@cloudsop/horizon": "^0.0.58",
+    "inulajs": "^0.0.8",
     "antd": "^4.0.0",
     "axios": "^1.4.0",
     "classnames": "^2.2.6",
@@ -54,10 +52,9 @@
     "path-to-regexp": "^6.1.0",
     "prop-types": "^15.7.0",
     "qs": "^6.10.0",
-    "react-intl": "^6.4.4",
+    "inula-intl": "^0.0.1",
+    "inula-router": "^0.0.1",
     "react-perfect-scrollbar": "^1.5.0",
-    "react-router": "^6.12.1",
-    "react-router-dom": "^5.0.0",
     "recharts": "^2.0.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
