--- a/packages/create-inula/lib/generators/Simple-app/templates/webpack/package.json
+++ b/packages/create-inula/lib/generators/Simple-app/templates/webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horizon-webpack-app",
+  "name": "inula-webpack-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cloudsop/horizon": "^0.0.58"
+    "inulajs": "^0.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
