--- a/packages/inula-router/package.json
+++ b/packages/inula-router/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@cloudsop/horizon-router",
+  "name": "inula-router",
   "version": "1.0.5-rc2",
-  "description": "router for horizon framework, a part of horizon-ecosystem",
+  "description": "router for inula framework, a part of inula-ecosystem",
   "main": "./router/cjs/router.js",
   "module": "./router/esm/router.js",
   "types": "./router/@types/index.d.ts",
@@ -11,17 +11,10 @@
     "/router",
     "README.md"
   ],
-  "bugs": {
-    "url": "https://open.codehub.huawei.com/innersource/fenghuang/horizon/horizon-ecosystem/issues"
-  },
   "scripts": {
     "test": "jest",
     "build": "rollup -c build.js && npm run build-types",
     "build-types": "tsc -p tsconfig.build.json && tsc -p tsconfig.cbuild.json && rollup -c build-types.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://szv-open.codehub.huawei.com/innersource/fenghuang/horizon/horizon-ecosystem.git"
   },
   "devDependencies": {
     "@babel/core": "7.21.3",
@@ -49,14 +42,13 @@
     "@babel/plugin-transform-template-literals": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@cloudsop/horizon": "^0.0.58",
+    "inulajs": "^0.0.11",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.3",
-    "@types/react": "18.0.25",
     "@types/react-redux": "7.0.0",
     "jest": "29.3.1",
     "jest-environment-jsdom": "^29.5.0",
@@ -70,7 +62,7 @@
     "typescript": "4.9.3"
   },
   "peerDependencies": {
-    "@cloudsop/horizon": ">=0.0.10"
+    "inulajs": ">=0.0.10"
   },
   "browserslist": {
     "production": [
