Match-id-d81b8714a1e050cc11372c5f9590f463be583978

--- a/.cloudbuild/codecheck.yml
+++ b/.cloudbuild/codecheck.yml
@@ -22,7 +22,7 @@ steps:
   pre_codecheck:
     - checkout:
         url: https://szv-open.codehub.huawei.com/innersource/fenghuang/horizon/horizon-core.git
-        branch: master
+        branch: out
         path: code
     - gitlab:
         url: https://szv-y.codehub.huawei.com/CloudSOP/CloudSOP-CI.git
