--- a/packages/inula-cli/package.json
+++ b/packages/inula-cli/package.json
@@ -28,12 +28,12 @@
     "@types/node": "^18.16.1",
     "@types/resolve": "^1.20.2",
     "@types/webpack": "^5.28.1",
-    "@types/yargs-parser": "^21.0.0"
+    "@types/yargs-parser": "^21.0.0",
+    "@types/http-proxy-middleware": "^1.0.0",
+    "@types/jest": "^29.5.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.22.5",
-    "@types/http-proxy-middleware": "^1.0.0",
-    "@types/jest": "^29.5.2",
     "babel-eslint": "^10.1.0",
     "chalk": "^4.0.0",
     "chokidar": "^3.5.3",
