Match-id-b3d0ab89ad8581051dc1201e494e9ffd9f4eb64b

--- a/packages/inula-intl/package.json
+++ b/packages/inula-intl/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/intl.umd.js",
   "type": "commonjs",
-  "types": "build/@types/index.d.ts",
+  "types": "build/index.d.ts",
   "scripts": {
     "demo-serve": "webpack serve --mode=development",
     "rollup-build": "rollup --config rollup.config.js",
