--- a/packages/inula/package.json
+++ b/packages/inula/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "openinula1",
-  "description": "Openinula is a JavaScript framework library.",
+  "name": "openinula",
+  "description": "OpenInula is a JavaScript framework library.",
   "keywords": [
     "openinula"
   ],
