--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "inulajs",
-  "description": "InulaJS is a JavaScript framework library.",
+  "name": "openinula",
+  "description": "OpenInula is a JavaScript framework library.",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "prettier": "prettier -w libs/**/*.ts",
-    "build:inula": "pnpm -F inulajs build",
-    "test:inula": "pnpm -F inulajs test",
+    "build:inula": "pnpm -F openinula build",
+    "test:inula": "pnpm -F openinula test",
     "build:inula-cli": "pnpm -F inula-cli build",
-    "build:inula-intl": "pnpm -F inula-intl rollup-build",
+    "build:inula-intl": "pnpm -F inula-intl build",
     "build:inula-request": "pnpm -F inula-request build",
     "build:inula-router": "pnpm -F inula-router build"
   },
