--- a/packages/inula-router/package.json
+++ b/packages/inula-router/package.json
@@ -62,6 +62,7 @@
     "rollup": "2.79.1",
     "rollup-plugin-dts": "^6.0.1",
     "rollup-plugin-terser": "^5.1.3",
+    "redux": "4.2.1",
     "ts-jest": "29.0.3",
     "typescript": "4.9.3"
   },
