[inula][inula-intl][inula-router][inula-request]<feat> 构建方式适配 monorepo

--- a/packages/inula-intl/package.json
+++ b/packages/inula-intl/package.json
@@ -23,7 +23,7 @@
   "author": "",
   "license": "MulanPSL2",
   "peerDependencies": {
-    "inulajs": "^0.0.12"
+    "openinula": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.21.3",
