--- a/packages/inula/tsconfig.build.json
+++ b/packages/inula/tsconfig.build.json
@@ -6,6 +6,6 @@
     "declaration": true,
     "skipLibCheck": true,
     "emitDeclarationOnly": true,
-    "declarationDir": "./build/inula/@types"
+    "declarationDir": "./build/@types"
   }
 }
