Match-id-4cc3574b83fb955dd2c7b7f3a5eb4beab4f22c94

--- a/packages/inula/package.json
+++ b/packages/inula/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inulajs",
+  "name": "inulajs-reactive",
   "description": "Inulajs is a JavaScript framework library.",
   "keywords": [
     "inulajs"
