--- a/packages/inula-intl/tsconfig.json
+++ b/packages/inula-intl/tsconfig.json
@@ -31,6 +31,8 @@
     "declaration": true,
     "experimentalDecorators": true,
     "downlevelIteration": true,
+    "emitDeclarationOnly": true,
+    "declarationDir": "./build/@types",
     // 赋值为空数组使@types/node不会起作用
     "lib": [
       "dom",
@@ -53,19 +55,23 @@
     }
   },
   "include": [
-    "./src/**/*",
-    "./src/format/**/*.ts",
-    "./example/**/*"
+    "./index.ts",
+
   ],
   "exclude": [
     "node_modules",
     "lib",
     "**/*.spec.ts",
-    "dev"
+    "dev",
+    "./example/**/*",
+    "./tsconfig.json"
   ],
   "types": [
     "node",
     "jest",
     "@testing-library/jest-dom"
+  ],
+  "files": [
+    "./index.ts"
   ]
 }
