[inula][create-inula]<feat> version updates

--- a/packages/inula/package.json
+++ b/packages/inula/package.json
@@ -4,7 +4,7 @@
   "keywords": [
     "openinula"
   ],
-  "version": "0.0.1",
+  "version": "0.0.4",
   "homepage": "",
   "bugs": "",
   "license": "MulanPSL2",
@@ -23,6 +23,6 @@
     "test": "jest --config=jest.config.js",
     "watch-test": "yarn test --watch --dev"
   },
-  "files": ["build/@types", "build/cjs", "build/umd", "build/index.js", "build/jsx-dev-runtime.js", "build/jsx-runtime.js", "README.md"],
+  "files": ["build/**/*", "README.md"],
   "types": "./build/@types/index.d.ts"
 }
