[all]<feat> update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openinula",
+  "name": "inula",
   "description": "OpenInula is a JavaScript framework library.",
   "version": "0.0.1",
   "private": true,
