[create-inula]<fix>明确node版本 & 项目名优化

--- a/packages/create-inula/package.json
+++ b/packages/create-inula/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "create-inula": "bin/cli.js"
   },
+  "engines": {
+    "node": ">= 18.0.0"
+  },
   "files": [
     "bin",
     "lib",
