--- a/packages/inula-intl/package.json
+++ b/packages/inula-intl/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "build/intl.umd.js",
   "type": "commonjs",
-  "types": "build/index.d.ts",
+  "types": "build/@types/index.d.ts",
   "scripts": {
     "demo-serve": "webpack serve --mode=development",
-    "build": "rollup --config rollup.config.js",
+    "rollup-build": "rollup --config rollup.config.js && npm run build-types",
+    "build-types": "tsc -p tsconfig.json && rollup -c build-type.js",
     "test": "jest --config jest.config.js",
     "test-c": "jest --coverage"
   },
@@ -33,6 +34,7 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^11.0.0",
+    "rollup-plugin-dts": "^6.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^16.18.27",
@@ -40,7 +42,6 @@
     "babel": "^6.23.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
-    "core-js": "3.31.0",
     "html-webpack-plugin": "^5.5.1",
     "jest": "29.3.1",
     "jest-environment-jsdom": "^29.5.0",
@@ -56,8 +57,6 @@
     "typescript": "4.9.3",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.13.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "webpack-dev-server": "^4.13.3"
   }
 }
