--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ package-lock.json
 pnpm-lock.yaml
 /packages/**/node_modules
 /packages/inula-cli/lib
+build
+/packages/inula-router/connectRouter
+/packages/inula-router/router
