--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "private": true,
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
-    "prettier": "prettier -w libs/**/*.ts",
+    "lint-commit": "lint-staged",
+    "prettier": "prettier .prettierrc.js -w packages/**/*.{ts,tsx,js,jsx}",
     "build:inula": "pnpm -F openinula build",
     "test:inula": "pnpm -F openinula test",
     "build:inula-cli": "pnpm -F inula-cli build",
     "build:inula-intl": "pnpm -F inula-intl build",
     "build:inula-request": "pnpm -F inula-request build",
-    "build:inula-router": "pnpm -F inula-router build"
+    "build:inula-router": "pnpm -F inula-router build",
+    "commitlint": "commitlint --config commitlint.config.js -e",
+    "postinstall": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier .prettierrc.js -w"
+    ]
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
@@ -42,6 +50,8 @@
     "@babel/preset-env": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.16.7",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
@@ -54,16 +64,17 @@
     "eslint": "7.13.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-jest": "^22.15.0",
-    "eslint-plugin-no-for-of-loops": "^1.0.0",
     "eslint-plugin-no-function-declare-after-return": "^1.0.0",
     "eslint-plugin-react": "7.14.3",
+    "husky": "^8.0.3",
     "jest": "^25.5.4",
     "jest-environment-jsdom-sixteen": "^1.0.3",
-    "prettier": "2.6.2",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
     "rollup": "^2.75.5",
     "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "4.2.3"
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=10.x",
