Match-id-46de0c74de8e8b1327bb36b1d9e60621acb380ea

--- a/packages/inula-novdom/package.json
+++ b/packages/inula-novdom/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "inula-reactive",
+  "name": "inula-novdom",
   "version": "0.0.1",
-  "description": "reactive core",
-  "main": "index.ts",
+  "description": "no vdom runtime",
+  "main": "index.js",
   "scripts": {
     "test": "jest --config=jest.config.js"
   },
