fix(request): 优化请求参数使用体验和解决 URL 拼接问题

--- a/packages/inula-request/package.json
+++ b/packages/inula-request/package.json
@@ -12,7 +12,8 @@
   },
   "files": [
     "/dist",
-    "README.md"
+    "README.md",
+    "CHANGELOG.md"
   ],
   "types": "./dist/index.d.ts",
   "repository": {
