--- a/packages/inula-cli/tsconfig.json
+++ b/packages/inula-cli/tsconfig.json
@@ -11,8 +11,15 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts", "./src/template/**/*"],
+  "include": [
+    "src/**/*",
+    "./externals.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "./src/template/**/*"
+  ],
   "ts-node": {
     "esm": true,
   },
