--- a/packages/inula/package.json
+++ b/packages/inula/package.json
@@ -26,10 +26,10 @@
   "types": "./build/@types/index.d.ts",
   "exports": {
     ".": {
-      "default": "./index.js"
+      "default": "./build/index.js"
     },
     "./package.json":"./package.json",
-    "./jsx-runtime": "./jsx-runtime.js",
-    "./jsx-dev-runtime": "./jsx-dev-runtime.js"
+    "./jsx-runtime": "./build/jsx-runtime.js",
+    "./jsx-dev-runtime": "./build/jsx-dev-runtime.js"
   }
 }
