!165 fix(core): 修复css变量为undefined是仍然被渲染的错误 * chore: bump jest to 29.7.0 * fix(core): 修复css变量为undefined是仍然被渲染的错误

--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "eslint-plugin-no-function-declare-after-return": "^1.0.0",
     "eslint-plugin-react": "7.14.3",
     "husky": "^8.0.3",
-    "jest": "^25.5.4",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "openinula": "workspace:*",
     "prettier": "^3.1.1",
