--- a/packages/inula-next-store/package.json
+++ b/packages/inula-next-store/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inula/store",
+  "name": "@openinula/store",
   "version": "0.0.0",
   "description": "DLight shared store",
   "author": {
