--- a/packages/inula-next/package.json
+++ b/packages/inula-next/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@inula/next",
-  "version": "1.0.0-next.9",
+  "name": "@openinula/next",
+  "version": "0.0.1",
   "author": {
     "name": "IanDx",
     "email": "iandxssxx@gmail.com"
   },
   "keywords": [
-    "dlight.js"
+    "inula"
   ],
   "license": "MIT",
   "files": [
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "csstype": "^3.1.3",
-    "@inula/store": "workspace:*"
+    "@openinula/store": "workspace:*"
   },
   "devDependencies": {
     "tsup": "^6.5.0"
