--- a/packages/transpiler/class-transformer/package.json
+++ b/packages/transpiler/class-transformer/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@inula/class-transformer",
-  "version": "0.0.0",
+  "name": "@openinula/class-transformer",
+  "version": "0.0.1",
   "description": "Inula view generator",
   "keywords": [
     "inula"
