--- a/packages/transpiler/error-handler/package.json
+++ b/packages/transpiler/error-handler/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@inula/error-handler",
-  "version": "1.0.0-alpha.0",
+  "name": "@openinula/error-handler",
+  "version": "0.0.1",
   "author": {
     "name": "IanDx",
     "email": "iandxssxx@gmail.com"
