--- a/packages/transpiler/view-generator/package.json
+++ b/packages/transpiler/view-generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inula/view-generator",
+  "name": "@openinula/view-generator",
   "version": "0.0.1",
   "author": {
     "name": "IanDx",
@@ -25,10 +25,10 @@
     "@types/node": "^20.10.5",
     "tsup": "^6.7.0",
     "typescript": "^5.3.2",
-    "@inula/reactivity-parser": "workspace:*"
+    "@openinula/reactivity-parser": "workspace:*"
   },
   "dependencies": {
-    "@inula/error-handler": "workspace:*"
+    "@openinula/error-handler": "workspace:*"
   },
   "tsup": {
     "entry": [
