--- a/packages/inula-next/package.json
+++ b/packages/inula-next/package.json
@@ -18,14 +18,17 @@
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup --sourcemap && cp src/index.d.ts dist/ && cp -r src/types dist/"
+    "build": "tsup --sourcemap && cp src/index.d.ts dist/ && cp -r src/types dist/",
+    "test": "vitest --ui"
   },
   "dependencies": {
     "csstype": "^3.1.3",
     "@openinula/store": "workspace:*"
   },
   "devDependencies": {
-    "tsup": "^6.5.0"
+    "tsup": "^6.5.0",
+    "vite-plugin-inula-next": "workspace:*",
+    "vitest": "^1.2.2"
   },
   "tsup": {
     "entry": [
