--- a/packages/transpiler/babel-preset-inula-next/package.json
+++ b/packages/transpiler/babel-preset-inula-next/package.json
@@ -44,7 +44,7 @@
     "@types/babel__generator": "^7.6.8",
     "@types/babel__parser": "^7.1.1",
     "@types/babel__traverse": "^7.6.8",
-    "jsx-view-parser": "workspace:*",
+    "@openinula/jsx-view-parser": "workspace:*",
     "minimatch": "^9.0.3",
     "vitest": "^1.4.0"
   },
