--- a/packages/transpiler/babel-inula-next-core/tsconfig.json
+++ b/packages/transpiler/babel-inula-next-core/tsconfig.json
@@ -2,12 +2,19 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "moduleResolution": "Node",
     "strict": true,
     "esModuleInterop": true
   },
   "ts-node": {
     "esm": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
