--- a/packages/transpiler/reactivity-parser/package.json
+++ b/packages/transpiler/reactivity-parser/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@openinula/error-handler": "workspace:*",
     "@openinula/jsx-view-parser": "workspace:*",
+    "@openinula/babel-api": "workspace:*",
     "@openinula/view-parser": "workspace:*"
   },
   "tsup": {
