--- a/packages/transpiler/view-generator/package.json
+++ b/packages/transpiler/view-generator/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@openinula/reactivity-parser",
-  "version": "0.0.1",
+  "name": "@openinula/view-generator",
+  "version": "1.0.0-next.2",
+  "description": "DLight View Generator given different types of reactivity units",
   "author": {
     "name": "IanDx",
     "email": "iandxssxx@gmail.com"
@@ -13,26 +14,22 @@
     "dist"
   ],
   "type": "module",
-  "main": "src/index.ts",
+  "main": "dist/index.cjs",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup --sourcemap",
-    "test": "vitest --ui"
+    "build": "tsup --sourcemap"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@types/babel__core": "^7.20.5",
-    "@vitest/ui": "^0.34.5",
+    "@types/node": "^20.10.5",
     "tsup": "^6.7.0",
     "typescript": "^5.3.2",
-    "vitest": "^0.34.5"
+    "@openinula/reactivity-parser": "workspace:*"
   },
   "dependencies": {
-    "@openinula/error-handler": "workspace:*",
-    "@openinula/jsx-view-parser": "workspace:*",
-    "@openinula/babel-api": "workspace:*",
-    "@openinula/view-parser": "workspace:*"
+    "@openinula/error-handler": "workspace:*"
   },
   "tsup": {
     "entry": [
@@ -44,7 +41,6 @@
     ],
     "clean": true,
     "dts": true,
-    "minify": true,
-    "sourcemap": true
+    "sourceMap": true
   }
 }
