--- a/packages/transpiler/vite-plugin-inula-next/package.json
+++ b/packages/transpiler/vite-plugin-inula-next/package.json
@@ -6,7 +6,7 @@
     "email": "iandxssxx@gmail.com"
   },
   "keywords": [
-    "dlight.js",
+    "Inula-Next",
     "vite-plugin"
   ],
   "license": "MIT",
