--- a/demos/v2/package.json
+++ b/demos/v2/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@babel/standalone": "^7.22.4",
-    "@openinula/next": "workspace:*",
     "@iandx/easy-css": "^0.10.14",
-    "babel-preset-inula-next": "workspace:*"
+    "@openinula/next": "workspace:*",
+    "babel-preset-inula-next": "workspace:*",
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
@@ -20,6 +21,6 @@
     "vite-plugin-inula-next": "workspace:*"
   },
   "keywords": [
-    "dlight.js"
+    "inula-next"
   ]
 }
