--- a/packages/transpiler/babel-inula-next-core/package.json
+++ b/packages/transpiler/babel-inula-next-core/package.json
@@ -6,7 +6,7 @@
     "email": "iandxssxx@gmail.com"
   },
   "keywords": [
-    "dlight.js",
+    "Inula-Next",
     "babel-preset"
   ],
   "license": "MIT",
