--- a/packages/transpiler/error-handler/package.json
+++ b/packages/transpiler/error-handler/package.json
@@ -6,7 +6,7 @@
     "email": "iandxssxx@gmail.com"
   },
   "keywords": [
-    "dlight.js"
+    "Inula-Next"
   ],
   "license": "MIT",
   "files": [
