--- a/packages/transpiler/view-parser/package.json
+++ b/packages/transpiler/view-parser/package.json
@@ -6,14 +6,14 @@
     "email": "iandxssxx@gmail.com"
   },
   "keywords": [
-    "dlight.js"
+    "Inula-Next"
   ],
   "license": "MIT",
   "files": [
     "dist"
   ],
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
