!173 feat: 调整产物结构 * feat: 支持本地多包管理 * feat: change inula main

--- a/packages/inula/package.json
+++ b/packages/inula/package.json
@@ -22,14 +22,13 @@
     "test": "jest --config=jest.config.js",
     "watch-test": "yarn test --watch --dev"
   },
-  "files": ["build/**/*", "README.md"],
   "types": "./build/@types/index.d.ts",
   "exports": {
     ".": {
-      "default": "./build/index.js"
+      "default": "./index.js"
     },
     "./package.json":"./package.json",
-    "./jsx-runtime": "./build/jsx-runtime.js",
-    "./jsx-dev-runtime": "./build/jsx-dev-runtime.js"
+    "./jsx-runtime": "./jsx-runtime.js",
+    "./jsx-dev-runtime": "./jsx-dev-runtime.js"
   }
 }
